Remove display property, this shouldn't be needed and creates an issue when combined with grid for FF on small screens.

--- a/wdn/templates_3.1/less/content/images.less
+++ b/wdn/templates_3.1/less/content/images.less
@@ -17,7 +17,6 @@
     margin: 0 0 10px 0;
     white-space:normal;
     line-height:0.8em;
-    display: inline-block;
     .box-sizing(border-box);
 }
 .caption() {
